--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     },
     "dependencies": {
         "@heroicons/vue": "^2.2.0",
+        "@vueform/multiselect": "^2.6.11",
         "vue": "^3.5.13",
         "vue-loader": "^17.4.2"
     }
