--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
         "laravel/framework": "^11.31",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
-        "tightenco/ziggy": "^2.0"
+        "laravolt/indonesia": "^0.36.0",
+        "tightenco/ziggy": "^2.0",
+        "vermaysha/laravel-wilayah-indonesia": "^2.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
