--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "dependencies": {
         "@heroicons/vue": "^2.2.0",
         "@vueform/multiselect": "^2.6.11",
+        "file-saver": "^2.0.5",
+        "html2canvas": "^1.4.1",
         "vue": "^3.5.13",
-        "vue-loader": "^17.4.2"
+        "vue-loader": "^17.4.2",
+        "xlsx": "^0.18.5"
     }
 }
