--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@vueform/multiselect": "^2.6.11",
         "file-saver": "^2.0.5",
         "html2canvas": "^1.4.1",
+        "qrcode": "^1.5.4",
         "vue": "^3.5.13",
         "vue-loader": "^17.4.2",
         "xlsx": "^0.18.5"
